<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context="com.example.android.justjava.MainActivity"
    android:background="@drawable/coffee2"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    android:scaleType="centerCrop">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <EditText
            android:id="@+id/ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textMultiLine"
            android:textColorHint="#000000"
            android:textStyle="bold"
            android:theme="@style/MyCheckBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/toppings"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_Cream"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:theme="@style/MyCheckBox"/>

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Chocolate"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:theme="@style/MyCheckBox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/Quantity"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:padding="8dp"
                android:text="-"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:padding="8dp"
                android:text="+"


                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="@string/ORDER"
            android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>
